--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ducanh2912/next-pwa": "^10.2.8",
     "flowbite": "^2.4.1",
     "flowbite-react": "^0.10.1",
     "formik": "^2.4.6",
