--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,14 +4,29 @@
     "description": "split squads",
     "icons": [
         {
-            "src": "/zizu.webp",
-            "type": "image/webp",
-            "sizes": "192x192"
+            "src": "/48.png",
+            "type": "image/png",
+            "sizes": "48x48"
         },
         {
-            "src": "/zizu.webp",
-            "type": "image/webp",
-            "sizes": "512x512"
+            "src": "/72.png",
+            "type": "image/png",
+            "sizes": "72x72"
+        },
+        {
+            "src": "/96.png",
+            "type": "image/png",
+            "sizes": "96x96"
+        },
+        {
+            "src": "/144.png",
+            "type": "image/png",
+            "sizes": "144x144"
+        },
+        {
+            "src": "/192.png",
+            "type": "image/png",
+            "sizes": "192x192"
         }
     ],
     "start_url": "/",
