--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icon": "^1.0.0",
+    "react-icons": "^5.3.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
